# library-api

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
database/: session.py
models/: book.py  category.py
