[project]
name = "library-api"
version = "0.1.0"
description = "Library API with FastAPI and SQLModel"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.124.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.29",
    "uvicorn>=0.33.0",
]
